# rai-service-tester-iter

./: Cargo.toml  Dockerfile  config.yml  config_iter.yml  docker-compose.yml
request_payload/: functionality-request.json  loadtest-request.json
src/: config_loader.rs  main.rs
