[package]
name = "rai-service-tester-iter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
warp = "0.3"